# love

./: .gitignore  angular.json  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  styles.scss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  vendors.txt
src-tauri/icons/: icon.icns
src-tauri/src/: arp.rs  main.rs  models.rs  vendor.rs
src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  memory.service.ts
src/app/interface-picker/: interface-picker.component.html  interface-picker.component.spec.ts  interface-picker.component.ts
src/app/interface-picker/net-interface/: net-interface.component.html  net-interface.component.scss  net-interface.component.spec.ts  net-interface.component.ts
src/app/lan/: lan.component.html  lan.component.scss  lan.component.ts
src/app/lan/lan-item/: lan-item.component.html  lan-item.component.scss  lan-item.component.spec.ts  lan-item.component.ts
src/app/loading/: loading.component.html  loading.component.ts
src/app/models/: interface.ts  lanClient.ts
src/app/net-interface/: net-interface.component.html  net-interface.component.scss  net-interface.component.ts
src/app/npcap/: npcap.component.html  npcap.component.spec.ts  npcap.component.ts
